--- a/BlazorServerApp2/Pages/ToDo.razor
+++ b/BlazorServerApp2/Pages/ToDo.razor
@@ -26,7 +26,7 @@
 <input placeholder="Something todo" @bind="newTodo" />
 <button @onclick="AddTodo">Add todo</button>
 <button @onclick="Sentlist"> Check Hash</button>
-<button @onclick="oldlist">Dum</button>
+<button @onclick="oldlist">Ikke bestået</button>
 
 
 @*<h3>MD5: @OutputText</h3>*@
